chore(css): Prevent videos from overflowing container

--- a/sass/skins/vibrance.sass
+++ b/sass/skins/vibrance.sass
@@ -45,6 +45,9 @@ main img
   transition: width 600ms ease-out, opacity 300ms 300ms ease-in
   transform: translate3d(0, 0, 0)
 
+video
+  max-width: 100%
+
 .footnotes,
 .credits
   color: var(--overlay0)
